Fix padding issue on course overview on smaller viewports

--- a/src/components/Dropdown/Dropdown.css
+++ b/src/components/Dropdown/Dropdown.css
@@ -85,7 +85,7 @@
 }
 
 .select-container .option-container .option label {
-    font-size: 1.1rem;
+    font-size: 0.8rem;
     color: white;
     cursor: pointer;
 }
